# autotools-tutorial

./: README  gnu-build-system.mm  sed.mm
hello-1.0/: Makefile.am  autogen.sh  clean.sh  configure.ac
hello-1.0/src/: main.cpp
hello/src/: main.cpp
libhello/: Makefile.am  configure.ac  libhello.pc.in
libhello/include/: hello.h  version.h
libhello/src/: Makefile.am  hello.cpp  version.cpp
